# setup-venv-uv-action

./: CONTRIBUTING.md  Makefile  README.md  SECURITY.md  action.yaml  pyproject.toml  tasks.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: cancel-stale-queued-runs.yaml  ci.yaml  format.yaml  nightly-tests.yaml  test-local.yaml  test-stable.yaml  verify-workflows.yaml
dev/: generate_makefile.sh  generate_tasks.sh
src/: __init__.py
src/myproject/: __init__.py
test_project/: MAKEFILE  tasks.py
